@@ -22,6 +22,7 @@ Localisations\
 Swedish - Christoffer Larsson\
 French - Cyril Gautrias\
 Italian - Marcello Teodori\
+German - Jan Kampling\
 
 \f1\fs24 \
 
