@@ -16,6 +16,7 @@ Thanks!
   downloads. The downloads folder can now be configured via Preferences.
 - Added "Mark All Subscriptions as Read" command. (Thanks to Yann Bizeul).
 - Incorporated patches from Yann Bizeul and Adam Hammer.
+- Close button on tabs now depress and highlight properly.
 
 2.0.0.2010
 ----------
